<resources>
    <string name="app_name">al-bawaba-cp</string>
    <string name="name">الاسم</string>
    <string name="nameExample">شاليه فلان</string>
    <string name="detailedAddressExample">طريق عين الزرقاء</string>
    <string name="contact">رقم التواصل</string>
    <string name="numberExample">+963 942 543 4235</string>
    <string name="dailyRent">الاجار اليومي</string>
    <string name="rentExample">20000</string>
    <string name="title">اعلان شاليه</string>
    <string name="content">الشرح</string>
    <string name="location">الموقع</string>
    <string name="locationExample">34.4325532,43,53243</string>
    <string name="available">متاح</string>
    <string name="rented">مؤجر</string>
    <string name="statue">الحالة</string>
    <string name="features">الميزات</string>
    <string name="pool">مسبح</string>
    <string name="goodView">اطلالة جميلة</string>
    <string name="electric">كهرباء</string>
    <string name="kidsPool">مسبح اطفال</string>
    <string name="closeToTown">قريب من البلد</string>
    <string name="water">توفر الماء</string>
    <string name="tv">تلفاز</string>
    <string name="parkingPlace">مكان لصف السيارة</string>
    <string name="bedrooms">غرف نوم</string>
    <string name="kitchen">مطبخ</string>
    <string name="save">حفظ</string>
    <string name="detailedAddress">العنوان دلالة</string>
    <string name="uploaded_photo">uploaded photo</string>
    <string name="delete_button">delete buuton</string>
    <string name="changePhoto">تغيير الصورة</string>
    <string name="delete">حذف</string>
    <string name="contentHint">يرجى كتابة شرح مفصل عن الشاليه</string>
    <string name="viewChosenImageImageView">viewChosenImageImageView</string>
    <string name="addImageButton">addImageButton</string>
    <string name="mainimageview">mainImageView</string>
</resources>
